# juggler

./: .gitignore  README.md  juggler.example.yaml  juggler.yml  pyproject.toml
juggler/: __main__.py  complete.py  config.py  juggler.css  juggler.tcss  log.py  message.py  model.py  sh.py  template.py  tester.py  tui.py
juggler/components/: baloon.py  layout.py
juggler/llm/: library.py
juggler/prompts/: beats.j2  brainstorm.j2  code.j2  graph.j2  keywords.j2  outline.j2  sh_system.j2  slides.j2  test.j2
