[tool.poetry]
name = "juggler"
version = "0.1.0"
description = ""
authors = ["Thiago Cardoso <thiagoncc@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
textual = "^0.53.1"
guidance = "^0.1.10"
pyyaml = "^6.0.1"
litellm = "^1.40.25"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
